# excelcsvconverter

./: pyproject.toml
.github/workflows/: python-publish.yml
src/excel_csv_decimal_converter/: csvconvertergui.py  csvdecimalconverter.py
src/excel_csv_decimal_converter_nikrapy/: csvconvertergui.py  csvdecimalconverter.py
workspace/src/: source_2.csv
